--- a/WpfClient/View/MainWindow.xaml
+++ b/WpfClient/View/MainWindow.xaml
@@ -2,6 +2,7 @@
     x:Class="WpfTcpClient.MainWindow"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:converters="clr-namespace:Common;assembly=Common"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:local="clr-namespace:WpfTcpClient.ViewModel"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
@@ -18,6 +19,7 @@
             <GradientStop Color="Black" />
             <GradientStop Offset="1" Color="LightGray" />
         </LinearGradientBrush>
+        <converters:DateFormatter x:Key="DateFormatter" />
     </Window.Resources>
 
     <Grid Background="{StaticResource DisabledBrush}">
@@ -51,7 +53,35 @@
             BorderBrush="Red"
             BorderThickness="4"
             CornerRadius="10">
-            <TextBlock Text="{Binding Path=AllMessages.Text}" />
+            <DataGrid
+                AutoGenerateColumns="False"
+                GridLinesVisibility="None"
+                HeadersVisibility="None"
+                ItemsSource="{Binding AllMessages}">
+                <DataGrid.Columns>
+                    <DataGridTemplateColumn>
+                        <DataGridTemplateColumn.CellTemplate>
+                            <DataTemplate>
+                                <TextBlock Text="{Binding Path=DateTime, Converter={StaticResource DateFormatter}}" />
+                            </DataTemplate>
+                        </DataGridTemplateColumn.CellTemplate>
+                    </DataGridTemplateColumn>
+                    <DataGridTemplateColumn>
+                        <DataGridTemplateColumn.CellTemplate>
+                            <DataTemplate>
+                                <TextBlock Text="{Binding Path=User.Name}" />
+                            </DataTemplate>
+                        </DataGridTemplateColumn.CellTemplate>
+                    </DataGridTemplateColumn>
+                    <DataGridTemplateColumn>
+                        <DataGridTemplateColumn.CellTemplate>
+                            <DataTemplate>
+                                <TextBlock Text="{Binding Path=Text}" />
+                            </DataTemplate>
+                        </DataGridTemplateColumn.CellTemplate>
+                    </DataGridTemplateColumn>
+                </DataGrid.Columns>
+            </DataGrid>
         </Border>
         <Border
             Grid.Row="4"
